# pedalboard-cli

./: .mise.toml  Cargo.toml  Makefile  README.md  build.rs
.github/workflows/: ci.yml
docs/: config-reference.md
examples/: audio-rig.yaml  feature-test.yaml  led-demo.yaml  minimal-audio.yaml  modes.yaml  perf-32-presets.yaml  practice.yaml  setlist.yaml
schema/: pedalboard.schema.json
src/: config.rs  main.rs  protocol.rs
src/commands/: compile.rs  flash.rs  mod.rs  mode.rs  monitor.rs  read.rs  status.rs  upload.rs
src/config/: color.rs  convert.rs  mod.rs  schema.rs  validate.rs
tests/: audio-integration.sh  integration.rs  integration.sh  midi-integration.sh  perf.sh
tests/fixtures/: global-config-test.yaml  single-preset.yaml
tests/hardware/: Cargo.toml
tests/hardware/src/: audio.rs  compiler.rs  lib.rs  midi.rs
