[package]
name = "pedalboard-cli"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
schemars = "0.8"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
pedalboard-protocol = { git = "https://github.com/pedalboard/pedalboard-protocol", branch = "main" }
postcard = { version = "1.1.1", features = ["alloc"] }
heapless = "0.9.3"
